--- a/Index.html
+++ b/Index.html
@@ -7,12 +7,9 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
 </head>
 <body>
-    <form id="CreateUser">
-        <div class="mb-3 container-sm">
-            <label for="User" class="form-label">Set User</label>
-            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-        </div>
-    </form>
+    <section id="library_Container">
+
+    </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="Script.js"></script>
 </body>
