Added states and state change

--- a/Index.html
+++ b/Index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="Styling.css">
 </head>
 <body>
+    <section id="Statemanger">
+
+    </section>
     <section id="library_Container">
 
     </section>
