--- a/Index.html
+++ b/Index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Library</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="Styling.css">
+    <link rel="stylesheet" href="styling.css">
 </head>
 <body>
     <section id="Statemanger">
@@ -15,6 +15,6 @@
 
     </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="Script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
